# integration_donnees_TP

./: .gitignore  QUALITY.md  README.md  compose.yaml  config.json  dashboard.py  notebook.ipynb  pyproject.toml  requirements.txt
docs/: ADR_001_DATA_SOURCE.md  DASHBOARD.md  EXTRACT.md  LOAD.MD  MISSIONS.md  POETRY.md  TRANSFORM.md  VIZUALISATION.md
etl/: extract.py  load.py  main.py  notebook.ipynb  transform.py  visualization.py
etl/shared/: config.py  metrics.py  utils.py
old/: notebook.ipynb
reports/: report_20260124_183404.json  report_20260124_184258.json  report_20260124_185029.json  report_20260124_190055.json  report_20260124_190117.json  report_20260124_190908.json  report_20260124_191934.json  report_20260124_193301.json  report_20260124_193445.json
