[project]
name = "off-etl"
version = "0.1.0"
description = "ETL Spark OpenFoodFacts"
authors = [
    {name = "cedric"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyspark (>=4.1.1,<5.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "mysql-connector-python (>=9.5.0,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
